新增玩法：变幻莫测

--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
             </tr>
             <tr>
                 <td><label><input type="checkbox" checked disabled> 方块大小</label></td>
-                <td><label>调整 <input type="number" min="5" max="100" value="20" required id="diamondSize" name="size"> px</label></td>
+                <td><label>调整 <input type="number" min="5" max="100" value="20" required id="diamondSize"> px</label></td>
             </tr>
             <tr>
                 <td><label><input type="checkbox" id="randomTransferCheckBox"> 随机传送</label></td>
-                <td><label>放置 <input type="number" min="1" max="10" value="3" id="randomTransferCount" name="count"> 个</label></td>
+                <td><label>放置 <input type="number" min="1" max="10" value="3" id="randomTransferCount"> 个</label></td>
+            </tr>
+            <tr>
+                <td><label><input type="checkbox" id="convertCheckBox"> 变幻莫测</label></td>
+                <td><label>间隔 <input type="number" min="1" max="60" value="10" id="convertSecond"> 秒</label></td>
             </tr>
             <tr>
                 <td colspan="2">
