--- a/index.html
+++ b/index.html
@@ -17,34 +17,32 @@
                 <td colspan="2">按 Esc / Tab 键弹出/关闭此选择框</td>
             </tr>
             <tr>
-                <th>玩法</th>
-                <th>程度</th>
+                <th>模式</th>
+                <th>参数</th>
             </tr>
             <tr>
                 <td><label><input type="checkbox" checked disabled> 方块大小</label></td>
-                <td><label>调整 <input type="number" min="5" max="100" value="20" required id="diamondSize"> px</label>
-                </td>
+                <td><label>调整 <input type="number" min="5" max="100" value="20" required id="diamondInput"> px</label></td>
             </tr>
             <tr>
-                <td><label><input type="checkbox" id="randomTransferCheckBox"> 随机传送</label></td>
-                <td><label>放置 <input type="number" min="1" max="99" value="3" id="randomTransferCount"> 个</label>
-                </td>
+                <td><label><input type="checkbox" id="transferCheckBox"> 随机传送</label></td>
+                <td><label>放置 <input type="number" min="1" max="99" value="3" id="transferInput"> 个</label></td>
             </tr>
             <tr>
                 <td><label><input type="checkbox" id="convertCheckBox"> 变幻莫测</label></td>
-                <td><label>间隔 <input type="number" min="1" max="60" value="10" id="convertSecond"> 秒</label></td>
+                <td><label>间隔 <input type="number" min="1" max="60" value="10" id="convertInput"> 秒</label></td>
             </tr>
             <tr>
                 <td><label><input type="checkbox" id="nightCheckBox"> 黑夜降临</label></td>
-                <td><label>视野 <input type="number" min="1" max="99" value="5" id="nightGrid"> 格</label></td>
+                <td><label>视野 <input type="number" min="1" max="99" value="5" id="nightInput"> 格</label></td>
             </tr>
             <tr>
                 <td><label><input type="checkbox" id="monsterCheckBox"> 行尸走肉</label></td>
-                <td><label>感染 <input type="number" min="1" max="99" value="3" id="monsterCount"> 个</label></td>
+                <td><label>感染 <input type="number" min="1" max="99" value="3" id="monsterInput"> 个</label></td>
             </tr>
             <tr>
                 <td><label><input type="checkbox" id="extendCheckBox"> 地图扩展</label></td>
-                <td><label>扩大 <input type="number" min="2" max="10" value="2" id="extendMultiple"> 倍</label></td>
+                <td><label>扩大 <input type="number" min="2" max="10" value="2" id="extendInput"> 倍</label></td>
             </tr>
             <tr>
                 <td colspan="2">
