新增功能：迷宫解法提示

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
                 <td><input type="color" value="#0000FF" id="color5"></td>
                 <td>玩家</td>
             </tr>
+            <tr>
+                <td><input type="color" value="#FFA500" id="color6"></td>
+                <td>提示</td>
+            </tr>
         </table>
     </form>
 </div>
